syntax = "proto3";

option go_package = "/pb;pb";

service MovieService {
  rpc saveMovie(MovieSaveRequest) returns (MovieResponse) {}
  rpc updateMovie(MovieUpdateRequest) returns (MovieResponse) {}
  rpc deleteMovie(MovieIdRequest) returns (EmptyMessage) {}
  rpc getMovie(MovieIdRequest) returns (MovieResponse) {}
  rpc getMovies(EmptyMessage) returns (MovieResponseList) {}
}

message EmptyMessage{

}

message MovieResponse {
  string id = 1;
  string name = 2;
  MovieRating rating = 3;
}

message MovieResponseList {
  repeated MovieResponse movies = 1;
}

message MovieSaveRequest {
  string name = 1;
}

message MovieIdRequest {
  string id = 1;
}

message MovieUpdateRequest {
  string id = 1;
  string name = 2;
}

message MovieRating{
  int64 like = 1;
  int64 dislike = 2;
}