syntax = "proto3";

option go_package = "/pb;pb";

service RatingService{
  rpc getRating(RatingRequest) returns(RatingResponse) {}
}

message RatingRequest{
  string movieId = 1;
}

message RatingResponse{
  string movieId = 1;
  int64 like = 2;
  int64 dislike = 3;
}